--- a/dnttouch.html
+++ b/dnttouch.html
@@ -3,7 +3,7 @@
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <meta http-equiv="X-UA-Compatible" content="ie=edge">
      <title>Travel Tours</title>
-     <link rel="stylesheet" href="prjt.css">
+     <link rel="stylesheet" href="styles.css">
  </head>
  <body>
  
@@ -29,34 +29,36 @@
  
      <!-- Destinations Section -->
      <section id="destinations">
-         <h2>Popular Destinations</h2>
+         <h2>Famous Kerala Destination</h2>
          <div class="destination-cards">
              <div class="card">
-                 <img src="paris.jpg" alt="Paris">
-                 <h3>Paris</h3>
-                 <p>The city of lights, famous for its art, history, and culture.</p>
+                 <img src="Thrissur.jpg" alt="THRISSUR">
+                 <h3>Thrissur</h3>
+                 <p>Thrissur is known as cultural capital of Kerala.</p>
              </div>
              <div class="card">
-                 <img src="bali.jpg" alt="Bali">
-                 <h3>Bali</h3>
-                 <p>A tropical paradise with stunning beaches and rich culture.</p>
+                 <img src="Alappuzha.jpg" alt="ALAPPUZHA">
+                 <h3>Alappuzha</h3>
+                 <p> The town is famous for its waterways and backwaters.</p>
              </div>
              <div class="card">
-                 <img src="tokyo.jpg" alt="Tokyo">
-                 <h3>Tokyo</h3>
-                 <p>Experience the vibrant culture of Japan's capital city.</p>
+                 <img src="Konni.jpeg" alt="KONNI">
+                 <h3>Konni</h3>
+                 <p>The lush green land has been prominent as a haven of wild elephants.</p>
              </div>
          </div>
      </section>
  
      <!-- Tour Packages Section -->
      <section id="packages">
-         <h2>Our Tour Packages</h2>
+         <h2>Kerala Tour Package</h2>
          <div class="package-cards">
-             <div class="card">
-                 <h3>Adventure Package</h3>
-                 <p>Explore the wilderness with our adventure-packed tours.</p>
-             </div>
+            <a href=""><div class="card">
+                <h3>Adventure Package</h3>
+                <p>Explore the wilderness with our adventure-packed tours.</p>
+            </div>
+        </a>
+             
              <div class="card">
                  <h3>Luxury Package</h3>
                  <p>Experience the best in comfort and style with our luxury tours.</p>
@@ -71,7 +73,7 @@
      <!-- Contact Section -->
      <section id="contact">
          <h2>Contact Us</h2>
-         <p>Have any questions? Get in touch with us!</p>
+         <p>Have any quaries? call us anytime!</p>
          <form action="#">
              <input type="text" placeholder="Your Name" required>
              <input type="email" placeholder="Your Email" required>
